# DEngine

./: CMakeLists.txt  TODO.md  imgui.ini  run.bat  run.sh
include/glad/: glad.h
libs/glad/: glad.c
src/: game_engine.cpp  game_engine.h  main.cpp  shader.cpp  shader.h
src/editor/: editor.h
src/renderer/: camera.h  frameBuffer.h  graphics_include.h  imgui_container.h  indexBuffer.h  renderer.h  resourceManager.h  shader.h  texture.h  utils.h  vertexArray.h  vertexAttribute.h  vertexBuffer.h  window.h
working/: line.fs  line.vs  quad.fs  quad.vs  shadow.fs  shadow.vs  simple.fs  simple.vs
